@@ -23,6 +23,7 @@ Application Fixes:
 - Fixed missing matrix condition monitors for equipment.
 - Fixed a parsing issue with the check for if multiple attributes could be at metatype max that could occasionally cause a clash.
 - Fixed issues with the implementation of the dual attribute connection for shapeshifters that caused them to inconsistently use the correct attribute.
+- Fixed an issue with the adding of One Trick Pony's free technique.
 
 Application Changes:
 
